# kawaii-dbt

./: .sqlfluff  Makefile  README.md  dbt_project.yml  extra_requirements.txt  profiles-example.yml  profiles.yml  pyproject.toml
.github/workflows/: sqlfluff.yml
docs/: catalog.json  manifest.json  run_results.json
models/staging/baseball/: stg_baseball.yml  stg_schedules.sql
