[tool.poetry]
name = "kawaii-dbt"
version = "0.1.0"
description = "My dbt project."
authors = ["tenajima <tenajima@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dbt-bigquery = "^1.1.0"
sqlfluff = "^0.13.0"
sqlfluff-templater-dbt = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
